[project]
name = "linkitin"
dynamic = ["version"]
description = "LinkedIn automation library - post, fetch, and search via Voyager API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["linkedin", "automation", "voyager-api", "social-media"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Internet",
]
dependencies = [
    "httpx>=0.27.0",
    "browser-cookie3>=0.20.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24.0"]

[project.urls]
Repository = "https://github.com/shuhaozhang/linkitin"
Issues = "https://github.com/shuhaozhang/linkitin/issues"
Changelog = "https://github.com/shuhaozhang/linkitin/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["linkitin"]

[tool.hatch.version]
source = "vcs"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
